[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/scorefont.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/style9_active.png" type="Texture" id=3]
[ext_resource path="res://levels/ResultMenu.gd" type="Script" id=4]

[node name="ResultMenu" type="Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
self_modulate = Color( 1, 1, 1, 0.588235 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -200.0
margin_right = 300.0
margin_bottom = 200.0
theme = ExtResource( 2 )
texture = ExtResource( 3 )
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="MarginContainer" parent="NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = -50.0

[node name="VBox" type="VBoxContainer" parent="NinePatchRect/Margin"]
margin_right = 500.0
margin_bottom = 300.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="NinePatchRect/Margin/VBox"]
margin_right = 500.0
margin_bottom = 43.0
custom_fonts/font = ExtResource( 1 )
text = "You Win!"
align = 1

[node name="Spacer" type="Control" parent="NinePatchRect/Margin/VBox"]
margin_top = 43.0
margin_right = 500.0
margin_bottom = 91.0
rect_min_size = Vector2( 0, 48 )

[node name="HBox" type="HBoxContainer" parent="NinePatchRect/Margin/VBox"]
visible = false
margin_top = 91.0
margin_right = 500.0
margin_bottom = 113.0

[node name="Label2" type="Label" parent="NinePatchRect/Margin/VBox/HBox"]
margin_left = 171.0
margin_right = 245.0
margin_bottom = 22.0
size_flags_horizontal = 14
text = "You killed "
align = 1

[node name="ZombiesOut" type="Label" parent="NinePatchRect/Margin/VBox/HBox"]
margin_left = 245.0
margin_right = 254.0
margin_bottom = 22.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 1 )
text = "0"
align = 1

[node name="Label4" type="Label" parent="NinePatchRect/Margin/VBox/HBox"]
margin_left = 254.0
margin_right = 323.0
margin_bottom = 22.0
size_flags_horizontal = 2
text = " zombies"
align = 1

[node name="HBox2" type="HBoxContainer" parent="NinePatchRect/Margin/VBox"]
visible = false
margin_top = 113.0
margin_right = 500.0
margin_bottom = 135.0

[node name="Label2" type="Label" parent="NinePatchRect/Margin/VBox/HBox2"]
margin_left = 94.0
margin_right = 250.0
margin_bottom = 22.0
size_flags_horizontal = 10
text = "You made it to level "
align = 1

[node name="LevelOut" type="Label" parent="NinePatchRect/Margin/VBox/HBox2"]
margin_left = 250.0
margin_right = 259.0
margin_bottom = 22.0
size_flags_horizontal = 2
custom_fonts/font = ExtResource( 1 )
text = "0"
align = 1

[node name="Button" type="Button" parent="NinePatchRect/Margin/VBox"]
pause_mode = 2
visible = false
margin_left = 202.0
margin_top = 248.0
margin_right = 298.0
margin_bottom = 300.0
rect_min_size = Vector2( 0, 52 )
size_flags_horizontal = 4
size_flags_vertical = 10
text = "Play again?"

[node name="WinButton" type="Button" parent="NinePatchRect/Margin/VBox"]
pause_mode = 2
visible = false
margin_left = 204.0
margin_top = 248.0
margin_right = 296.0
margin_bottom = 300.0
rect_min_size = Vector2( 0, 52 )
size_flags_horizontal = 4
size_flags_vertical = 10
text = "Next Level"

[connection signal="pressed" from="NinePatchRect/Margin/VBox/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="NinePatchRect/Margin/VBox/WinButton" to="." method="_on_WinButton_pressed"]
